# SumSaar

./: .gitignore  GEMINI.md  README.md  pyproject.toml
airflow/dags/: daily_fetch.py
docker/: .env_example  Celery_Dockerfile  Django_Dockerfile  Dockerfile  Streamlit_Dockerfile  docker-compose.app.yml  docker-compose.yml  download_nltk.py  image_env  requirements.txt
docs/: Gemini.md  architecture.md  design.md  features.md  llm_conversations.txt  notes.md  steps.md
sumsaar/: crawler.py  pipeline.py  pipeline2.py  rss.py  serve.py  settings.py
sumsaar/runtime/: cache.json  feeds.csv  feeds_bak.csv  feeds_blacklist.csv
sumsaar/webserver/chitrapat/: apps.py  models.py  routers.py  tasks.py  urls.py  views.py
sumsaar/webserver/chitrapat/templates/chitrapat/: article_detail.html  article_list.html  pipeline_dashboard.html  raw_article_detail.html  raw_article_list.html
sumsaar/webserver/webserver/: celery.py  settings.py  urls.py
